fix: spacing

--- a/src/assets/styles/base/index.css
+++ b/src/assets/styles/base/index.css
@@ -542,9 +542,8 @@ ul, ol {
   margin: var(--margin-vertical-base-horizontal-zero);
   padding-left: var(--spacing-base);
 
-  & li {
-    margin-top: var(--spacing-sm);
-    margin-bottom: var(--spacing-sm);
+  & li:not(:last-child) {
+    margin-bottom: var(--spacing-lg);
   }
 }
 
